Switch image paths to WebP, convert jpg/png to WebP

--- a/src/content/blog/2026InteractiveGSTemplate.mdx
+++ b/src/content/blog/2026InteractiveGSTemplate.mdx
@@ -3,7 +3,7 @@ title: "The 2026 Raw Data Template — Join the Journey to Quantify and Improve 
 pubDate: "2025-11-01"
 description: "The newest iteration of the LifeLoggerz Raw Data system — refined, automated, and ready for anyone who wants to track their life in detail using Google Sheets."
 tags: ["LifeLoggerz", "Google Sheets", "Raw Data", "Productivity", "Self-Improvement", "Template"]
-heroImage: "/images/2026cleanrawdatatemplate.png"
+heroImage: "/images_webp/2026cleanrawdatatemplate.webp"
 draft: false
 ---
 
@@ -48,7 +48,7 @@ Everything was rebuilt from the ground up to make the experience **as intuitive 
 ## 🧩 Inside the Template
 
 <figure>
-  <img src="/images/rawdatapost/2026-raw-data-sheet.png" alt="2026 Raw Data Template" />
+  <img src="/images_webp/rawdatapost/2026-raw-data-sheet.webp" alt="2026 Raw Data Template" />
   <figcaption><em>The 2026 edition — polished visuals, optimized structure, and ready for daily use.</em></figcaption>
 </figure>
 
