--- a/src/content/blog/art.mdx
+++ b/src/content/blog/art.mdx
@@ -3,7 +3,7 @@ title: "The DailyArt Challenge — One Artwork a Day for Life"
 pubDate: "2025-10-27"
 description: "How I built a lifelong habit of seeing one artwork a day — powered by Google Sheets, the DailyArt app, and a touch of automation."
 tags: ["LifeLoggerz", "DailyArt", "Google Sheets", "Habits", "Culture"]
-heroImage: "/images/art.png"
+heroImage: "/images_webp/art.webp"
 draft: false
 ---
 
@@ -18,7 +18,7 @@ Through this tiny habit, I’ve started to understand the cultural world around 
 Whenever I walk through a museum, I catch hints of brushwork, color, or subject that whisper, *“You’ve seen something like this before.”* It’s slow education — one image at a time.
 
 <figure>
-  <img src="/images/art.png" alt="Viewing a DailyArt painting on the app" />
+  <img src="/images_webp/art.webp" alt="Viewing a DailyArt painting on the app" />
   <figcaption><em>Each morning begins with a short dialogue between me and an artwork.</em></figcaption>
 </figure>
 
@@ -30,7 +30,7 @@ The real magic happens over time.
 Since **January 1, 2024**, I’ve been logging every piece I see into a **Google Sheets tracker** — now hundreds of rows long.  
 
 <figure>
-  <img src="/images/artgallery.png" alt="LifeLoggerz Art Gallery built with Raindrop and GS metadata" />
+  <img src="/images_webp/artgallery.webp" alt="LifeLoggerz Art Gallery built with Raindrop and GS metadata" />
   <figcaption><em>The Art Gallery — every entry since 1 Jan 2024, complete with metadata and museum links.</em></figcaption>
 </figure>
 
@@ -54,7 +54,7 @@ An **Apps Script + ChatGPT API** combination fills in the *Movement* field and e
 Another script pushes the finalized metadata into **Raindrop**, where my gallery lives.  
 
 <figure>
-  <img src="/images/artgs.png" alt="Google Sheet showing artwork metadata synced with Raindrop" />
+  <img src="/images_webp/artgs.webp" alt="Google Sheet showing artwork metadata synced with Raindrop" />
   <figcaption><em>The Art Tracker — each record enriched with movement and artist links.</em></figcaption>
 </figure>
 
@@ -71,7 +71,7 @@ It’s free, thoughtfully curated, and draws from hundreds of museums worldwide.
 No ads, no noise — just art and a short daily essay.
 
 <figure>
-  <img src="/images/dailyartapp.png" alt="DailyArt mobile app interface showing featured painting of the day" />
+  <img src="/images_webp/dailyartapp.webp" alt="DailyArt mobile app interface showing featured painting of the day" />
   <figcaption><em>The DailyArt app — a calm, beautiful dose of culture every morning.</em></figcaption>
 </figure>
 
