--- a/src/content/blog/cheapblog.mdx
+++ b/src/content/blog/cheapblog.mdx
@@ -3,7 +3,7 @@ title: "This Blog Only Costs $10 a Year — How I Built a Fully Custom Static Si
 pubDate: "2025-11-20"
 description: "A transparent walkthrough of how I built LifeLoggerz using a $10/year tech stack — and why simplicity doesn’t have to mean limitation."
 tags: ["Astro", "Web Development", "GitHub Pages", "Cloudflare", "Static Sites", "LifeLoggerz"]
-heroImage: "/images/blogface.png"
+heroImage: "/images_webp/blogface.webp"
 draft: false
 ---
 
@@ -217,7 +217,7 @@ With static sites, you can host *anything*:
 
 - PDF files → `/public/files/…`  
 - Excel files → `/public/downloads/…`  
-- Images → `/images/…`  
+- Images → `/images_webp/…`  
 - Thumbnails → `/assets/…`  
 
 Just drag the file into `public/` and Astro will serve it automatically.
