--- a/src/content/blog/composers.mdx
+++ b/src/content/blog/composers.mdx
@@ -3,7 +3,7 @@ title: "Conquering the Western Classical Canon — One Composer at a Time"
 pubDate: "2025-10-27"
 description: "Tracking a year-long journey through the Western Classical Canon — from Haydn to the late Romantics — and the systems I built to catalog, rate, and rediscover timeless works."
 tags: ["LifeLoggerz", "Music", "Classical", "Data Tracking", "Personal Growth"]
-heroImage: "/images/composers.png"
+heroImage: "/images_webp/composers.webp"
 draft: false
 ---
 
@@ -32,7 +32,7 @@ As of this post — nearly a year since I began — I’ve listened to **486 hou
 Most of this listening happens during research or writing sessions, where the music doubles as both inspiration and focus.
 
 <figure>
-  <img src="/images/composersdash.png" alt="Composers Dashboard — stats visualization of listening habits across composers" />
+  <img src="/images_webp/composersdash.webp" alt="Composers Dashboard — stats visualization of listening habits across composers" />
   <figcaption><em>The Composers Dashboard — dynamically updated stats tracking hours listened, pieces rated, and time periods explored.</em></figcaption>
 </figure>
 
@@ -43,7 +43,7 @@ Each composer’s listening period is logged in Google Sheets — every date, pi
 ## 🧾 3. The Google Sheets System
 
 <figure>
-  <img src="/images/composersheetgs.png" alt="Composer Sheet in Google Sheets tracking metadata, genres, and ratings" />
+  <img src="/images_webp/composersheetgs.webp" alt="Composer Sheet in Google Sheets tracking metadata, genres, and ratings" />
   <figcaption><em>Composer Tracking Sheet — each row holds metadata fetched automatically via ChatGPT API through Google Apps Script.</em></figcaption>
 </figure>
 
