--- a/src/content/blog/daily-snapshot.mdx
+++ b/src/content/blog/daily-snapshot.mdx
@@ -3,7 +3,7 @@ title: "The Daily Snapshot — Summary of the Day using Raw Data in Google Sheet
 pubDate: "2025-11-23"
 description: "How a single day in Google Sheets reflects years of structured data logging — from daily diaries and photos to automated summaries powered by Apps Script and ChatGPT."
 tags: ["LifeLoggerz", "Google Sheets", "Daily Snapshot", "Automation", "Self-Improvement"]
-heroImage: "/images/daily_snapshot.png"
+heroImage: "/images_webp/daily_snapshot.webp"
 draft: false
 ---
 
@@ -28,7 +28,7 @@ Together, they form a living logbook of my year.
 ## 🖼 Daily Snapshot Overview
 
 <figure>
-  <img src="/images/daily_snapshot.png" alt="Daily Snapshot — the overview page pulling data from Raw Data Sheets" />
+  <img src="/images_webp/daily_snapshot.webp" alt="Daily Snapshot — the overview page pulling data from Raw Data Sheets" />
   <figcaption><em>The Daily Snapshot sheet — every cell dynamically pulls from other pages using INDEX formulas.</em></figcaption>
 </figure>
 
@@ -45,7 +45,7 @@ This is the “hub” — a dashboard of my day, visually arranged with color-co
 ## ✍️ 2. Complete Diary Log
 
 <figure>
-  <img src="/images/day-summary-diary-log.png" alt="Complete Diary Log generated from the Daily Snapshot sheet" />
+  <img src="/images_webp/day-summary-diary-log.webp" alt="Complete Diary Log generated from the Daily Snapshot sheet" />
   <figcaption><em>The full diary for 9/11/25 — written by hand each night before data processing and archiving.</em></figcaption>
 </figure>
 
@@ -57,7 +57,7 @@ It captures context: what I did, thought, and felt that day, preserved with time
 ## ⚙️ 3. Condensed Diary Log (Automated with GAS + ChatGPT API)
 
 <figure>
-  <img src="/images/day-summary-condensed-log.png" alt="Condensed Diary Log generated using GAS and ChatGPT API" />
+  <img src="/images_webp/day-summary-condensed-log.webp" alt="Condensed Diary Log generated using GAS and ChatGPT API" />
   <figcaption><em>Condensed Diary Log — automatically summarized by Google Apps Script + ChatGPT API.</em></figcaption>
 </figure>
 
@@ -71,7 +71,7 @@ It’s automation serving awareness — not replacing reflection, but amplifying
 ## 🔧 4. Behind the Scenes — INDEX, IFERROR, and Drive Integration
 
 <figure>
-  <img src="/images/behind-the-scenes-summarygs.png" alt="Behind the scenes of the Summary GS sheet showing INDEX and IFERROR formulas" />
+  <img src="/images_webp/behind-the-scenes-summarygs.webp" alt="Behind the scenes of the Summary GS sheet showing INDEX and IFERROR formulas" />
   <figcaption><em>Behind the scenes: 52 formulas bring every piece of data together into a single snapshot.</em></figcaption>
 </figure>
 
@@ -85,7 +85,7 @@ Even the **Photo of the Day** is automated: Google Drive links are parsed with a
 > *(Click the image below to learn more — coming soon!)*
 
 <a href="/blog/photo-a-day-automation" title="Coming Soon: Automating Photo-a-Day in Google Sheets">
-  <img src="/images/day-summary-diary-log.png" alt="Clickable teaser for Photo-A-Day project" style="border-radius:12px; margin-top:1rem;" />
+  <img src="/images_webp/day-summary-diary-log.webp" alt="Clickable teaser for Photo-A-Day project" style="border-radius:12px; margin-top:1rem;" />
 </a>
 
 ---
@@ -93,7 +93,7 @@ Even the **Photo of the Day** is automated: Google Drive links are parsed with a
 ## 🔮 5. Day-vs-Day Archive Comparison
 
 <figure>
-  <img src="/images/day-vs-day-archive-comparison.png" alt="Day vs Day archive comparison across multiple years" />
+  <img src="/images_webp/day-vs-day-archive-comparison.webp" alt="Day vs Day archive comparison across multiple years" />
   <figcaption><em>Day-vs-Day Comparison — seeing the same date across years, side by side.</em></figcaption>
 </figure>
 
