--- a/src/content/blog/labautomation.mdx
+++ b/src/content/blog/labautomation.mdx
@@ -3,7 +3,7 @@ title: "Lab Automation — Turning Months of Manual Work Into Minutes"
 pubDate: "2025-11-12"
 description: "How I automated the data processing of over a dozen lab machines using Python — transforming tedious manual analysis into a one-click workflow."
 tags: ["LifeLoggerz", "Python", "Research Automation", "Lab Efficiency", "Productivity"]
-heroImage: "/images/lab-automation.png"
+heroImage: "/images_webp/lab-automation.webp"
 draft: false
 ---
 
@@ -22,7 +22,7 @@ And it all began in **Thonny**, the simplest Python IDE I could find.
 ## 🧩 The Research Script Launcher
 
 <figure>
-  <img src="/images/lab-automation-app.png" alt="Research Script Launcher" />
+  <img src="/images_webp/lab-automation-app.webp" alt="Research Script Launcher" />
   <figcaption><em>The GUI launcher that starts it all — one interface, many instruments.</em></figcaption>
 </figure>
 
@@ -62,7 +62,7 @@ Everything follows the same structure — modular, consistent, and human-proof.
 ## 💡 The Learning Curve
 
 <figure>
-  <img src="/images/lab-automation-progress.png" alt="Python Progress" />
+  <img src="/images_webp/lab-automation-progress.webp" alt="Python Progress" />
   <figcaption><em>Early debugging in Thonny — my first lines of Python that actually worked.</em></figcaption>
 </figure>
 
