--- a/src/content/blog/money.mdx
+++ b/src/content/blog/money.mdx
@@ -2,7 +2,7 @@
 title: "From Dollars to Decisions — How I Track My Entire Financial Life in Google Sheets 💵📊"
 description: "A deep look at how I built a fully automated financial tracking system in Google Sheets — logging every dollar earned, spent, or saved across months, categories, and dashboards."
 pubDate: "2025-09-19"
-heroImage: "/images/finances.png"
+heroImage: "/images_webp/finances.webp"
 ---
 
 While LifeLoggerz began as a habit-tracking project, one of the most powerful parts of the system became my **financial tracker**.
