--- a/src/content/blog/scholarships.mdx
+++ b/src/content/blog/scholarships.mdx
@@ -3,7 +3,7 @@ title: "Scholarship Spreadsheet — Tracking, Applying, Winning"
 pubDate: "2025-11-12"
 description: "How a simple spreadsheet helped me win 8 scholarships with a 3.0 GPA — and how you can use it to do the same."
 tags: ["LifeLoggerz", "Scholarships", "Google Sheets", "Education", "Self-Improvement"]
-heroImage: "/images/scholarships.png"
+heroImage: "/images_webp/scholarships.webp"
 draft: false
 ---
 
@@ -36,7 +36,7 @@ It quickly evolved into a **visual system** — part planner, part motivational 
 ## 🧱 Building the First Version (V1–V2)
 
 <figure>
-  <img src="/images/scholarshippost/scholarship-v2.png" alt="UTA Civil Engineering Scholarship Excel Sheet V2" />
+  <img src="/images_webp/scholarshippost/scholarship-v2.webp" alt="UTA Civil Engineering Scholarship Excel Sheet V2" />
   <figcaption><em>Version 2: UTA Civil Engineering Scholarships — the original foundation that started it all.</em></figcaption>
 </figure>
 
@@ -52,7 +52,7 @@ Even if I didn’t win one, I reused essays, refined them, and reapplied.
 ## 🚀 LifeLoggerz Upgrade (V3)
 
 <figure>
-  <img src="/images/scholarshippost/scholarship-v3.png" alt="LifeLoggerz Ultimate Scholarship Sheet V3" />
+  <img src="/images_webp/scholarshippost/scholarship-v3.webp" alt="LifeLoggerz Ultimate Scholarship Sheet V3" />
   <figcaption><em>Version 3: The LifeLoggerz Ultimate Scholarship Sheet — brighter, cleaner, and open for everyone.</em></figcaption>
 </figure>
 
