--- a/src/content/blog/shorthand.mdx
+++ b/src/content/blog/shorthand.mdx
@@ -3,7 +3,7 @@ title: "A Simple Shorthand System — Before You Commit to Something Harder"
 pubDate: "2025-10-27"
 description: "My homemade shorthand system: a set of suffix and abbreviation symbols I built to write faster without learning a whole new script like Gregg or Pitman."
 tags: ["LifeLoggerz", "Writing", "Efficiency", "Productivity", "Notes"]
-heroImage: "/images/shorthand.png"
+heroImage: "/images_webp/shorthand.webp"
 draft: false
 ---
 
@@ -37,7 +37,7 @@ Each one gets its own **symbol** — a small curl, slash, or curve that you can 
 The result? A smooth flow that *feels like normal writing*, just stripped down.
 
 <figure>
-  <img src="/images/shorthand1.png" alt="Homemade shorthand suffix list draft" />
+  <img src="/images_webp/shorthand1.webp" alt="Homemade shorthand suffix list draft" />
   <figcaption><em>My original shorthand suffix list, written on 10/30/21. Each mark represents a common English suffix.</em></figcaption>
 </figure>
 
@@ -67,7 +67,7 @@ After the suffixes, I made a second page with **abbreviations** for frequent wor
 This is where the real speed boost happens.
 
 <figure>
-  <img src="/images/shorthand2.png" alt="Shorthand abbreviations and symbol system" />
+  <img src="/images_webp/shorthand2.webp" alt="Shorthand abbreviations and symbol system" />
   <figcaption><em>Abbreviations and symbol references for frequent words — my shorthand 'dictionary.'</em></figcaption>
 </figure>
 
