--- a/src/content/blog/studytimer.mdx
+++ b/src/content/blog/studytimer.mdx
@@ -4,7 +4,7 @@ title: "LifeLoggerz StudyTimer — Turning Focus into Feedback Loops"
 pubDate: "2025-11-11"
 description: "The StudyTimer app that powers my daily focus sessions — milestone sounds, live stats, and frictionless time tracking built with Python and CustomTkinter."
 tags: ["LifeLoggerz", "Python", "CustomTkinter", "Productivity", "Focus", "Automation"]
-heroImage: "/images/studytimer.png"
+heroImage: "/images_webp/studytimer.webp"
 draft: false
 ------------
 
@@ -39,7 +39,7 @@ Now it’s the backbone of my **daily study routine** — every serious session 
 ## ⚙️ 2. The Interface
 
 <figure>
-  <img src="/images/studytimer-ui.png" alt="StudyTimer App Interface" />
+  <img src="/images_webp/studytimer-ui.webp" alt="StudyTimer App Interface" />
   <figcaption><em>A clean, dark-mode timer with three main buttons and milestone messages below the display.</em></figcaption>
 </figure>
 
@@ -172,7 +172,7 @@ Or, if you just want the direct link:
 [⬇️ Download StudyTimer (Windows .exe in ZIP)](https://drive.google.com/uc?export=download&id=1NQiGppbn5UM5vrc66gBMaUwQPAlk5Nk9)
 
 <figure>
-  <img src="/images/studytimer.png" alt="StudyTimer app preview" />
+  <img src="/images_webp/studytimer.webp" alt="StudyTimer app preview" />
   <figcaption><em>StudyTimer — minimal, local, and built for deep work.</em></figcaption>
 </figure>
 
