--- a/src/content/blog/dictionary.mdx
+++ b/src/content/blog/dictionary.mdx
@@ -3,8 +3,8 @@ title: "Reading the Dictionary — One Page a Day Since 12/22/22"
 pubDate: "2025-11-11"
 description: "A nearly three-year habit of reading the Merriam-Webster 10th Collegiate from cover to cover taught me that five minutes a day can move mountains."
 tags: ["LifeLoggerz", "Habits", "Discipline", "Dictionary Project", "Persistence"]
-heroImage: "/images/dictionary.jpg"
-image: "/images/dictionary.jpg"         
+heroImage: "/images_webp/dictionary.webp"
+image: "/images_webp/dictionary.webp"         
 draft: false
 ---
 
