--- a/src/content/blog/original-to-do-list-template.mdx
+++ b/src/content/blog/original-to-do-list-template.mdx
@@ -4,7 +4,7 @@ description: "A printable and flexible weekly task planner designed to help you 
 pubDate: 2025-09-18
 draft: false
 tags: ["templates", "organization", "productivity", "planning"]
-heroImage: "/templates/covers/todo-cover.png"
+heroImage: "/templates/covers/todo-cover.webp"
 heroImageStyle: "max-height: 600px; width: auto; display: block; margin: 0 auto; object-fit: contain;"
 wide: true
 ---
@@ -15,7 +15,7 @@ wide: true
 
 <div style="display:grid; place-items:center; gap:1rem; margin:1rem 0;">
   <img
-    src="/templates/examples/todo-example.png"
+    src="/templates/examples/todo-example.webp"
     alt="Weekly To-Do List Template Example Page"
     style="width:100%; max-width:640px; height:auto; border-radius:12px; box-shadow:0 4px 16px rgba(0,0,0,0.08); background:#fff;"
     loading="lazy"
