--- a/src/content/blog/rawdatapost2025.mdx
+++ b/src/content/blog/rawdatapost2025.mdx
@@ -3,7 +3,7 @@ title: "The Raw Data Sheets — Quantifying My Life One Day at a Time"
 pubDate: "2025-11-22"
 description: "The foundation of the LifeLoggerz system — a daily Google Sheet where every stat, habit, and moment gets recorded, forming the base of all future analytics."
 tags: ["LifeLoggerz", "Google Sheets", "Raw Data", "Productivity", "Self-Improvement"]
-heroImage: "/images/rawdatapost/2025-raw-data-sheet.png"
+heroImage: "/images_webp/rawdatapost/2025-raw-data-sheet.webp"
 draft: false
 ---
 
@@ -27,7 +27,7 @@ So in 2023, I decided to bring structure into the mix.
 ### 🗓 2023 — The Barebones Beginning
 
 <figure>
-  <img src="/images/rawdatapost/2023-raw-data-sheet.png" alt="2023 Raw Data Sheet" />
+  <img src="/images_webp/rawdatapost/2023-raw-data-sheet.webp" alt="2023 Raw Data Sheet" />
   <figcaption><em>2023: Where it all started. Just a few stats — minimal, mostly monochrome, and size 8 font.</em></figcaption>
 </figure>
 
@@ -43,7 +43,7 @@ No fancy formatting, more stats came later (the ones to the right).
 ### 💡 2024 — The Awakening
 
 <figure>
-  <img src="/images/rawdatapost/2024-raw-data-sheet.png" alt="2024 Raw Data Sheet" />
+  <img src="/images_webp/rawdatapost/2024-raw-data-sheet.webp" alt="2024 Raw Data Sheet" />
   <figcaption><em>2024: Color enters the picture. The system starts expanding — one sheet for every facet of life.</em></figcaption>
 </figure>
 
@@ -58,7 +58,7 @@ I began **color-coding** and **indexing** every entry — the moment LifeLoggerz
 ### 📈 2024 — The First Graphs
 
 <figure>
-  <img src="/images/rawdatapost/2024-started-graphing-data.png" alt="2024 Graphing Data" />
+  <img src="/images_webp/rawdatapost/2024-started-graphing-data.webp" alt="2024 Graphing Data" />
   <figcaption><em>The birth of visual feedback — graphs for habits, work hours, and wellness.</em></figcaption>
 </figure>
 
@@ -71,7 +71,7 @@ Even with all these extra stats, filling this in daily is a small commitment wit
 ### 🚀 2025 — The Refined System
 
 <figure>
-  <img src="/images/rawdatapost/2025-raw-data-sheet.png" alt="2025 Raw Data Sheet" />
+  <img src="/images_webp/rawdatapost/2025-raw-data-sheet.webp" alt="2025 Raw Data Sheet" />
   <figcaption><em>2025: A mature system — structured, colorful, and interconnected across sheets.</em></figcaption>
 </figure>
 
@@ -127,7 +127,7 @@ These are all part of the **Raw Data workbook** — the foundation of everything
 ### 💰 Money
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-money.png" alt="Raw Data Money Sheet" />
+  <img src="/images_webp/rawdatapost/rawdata-money.webp" alt="Raw Data Money Sheet" />
   <figcaption><em>Tracks income, spending, and savings progress — a mirror of financial discipline.</em></figcaption>
 </figure>
 
@@ -139,7 +139,7 @@ This sheet shows what I spend on, what I invest in, etc.
 ### 📜 Logs (Complete)
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-logs.png" alt="Raw Data Logs" />
+  <img src="/images_webp/rawdatapost/rawdata-logs.webp" alt="Raw Data Logs" />
   <figcaption><em>The complete daily log — a full written record of the day’s thoughts and actions.</em></figcaption>
 </figure>
 
@@ -152,7 +152,7 @@ Feels great to go back to these after a while and relive each day.
 ### ⚙️ Logs (Condensed)
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-logs-condensed.png" alt="Raw Data Condensed Logs" />
+  <img src="/images_webp/rawdatapost/rawdata-logs-condensed.webp" alt="Raw Data Condensed Logs" />
   <figcaption><em>Condensed logs — auto-generated summaries using Google Apps Script and ChatGPT API.</em></figcaption>
 </figure>
 
@@ -164,7 +164,7 @@ If I need to quickly get info about a day, this is much easier to navigate than 
 ### 💬 Quotes
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-quotes.png" alt="Raw Data Quotes" />
+  <img src="/images_webp/rawdatapost/rawdata-quotes.webp" alt="Raw Data Quotes" />
   <figcaption><em>A growing collection of quotes from the people in my life.</em></figcaption>
 </figure>
 
@@ -176,7 +176,7 @@ These quotes (and the context provided) help you to plant yourself in that dista
 ### 💥 Blunders
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-blunders.png" alt="Raw Data Blunders" />
+  <img src="/images_webp/rawdatapost/rawdata-blunders.webp" alt="Raw Data Blunders" />
   <figcaption><em>Failures become data too — the point is to make them stand out so that they're easier to avoid repeating.</em></figcaption>
 </figure>
 
@@ -188,7 +188,7 @@ As for big blunders, I needn't say more.
 ### 👕 Outfits
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-outfits.png" alt="Raw Data Outfits" />
+  <img src="/images_webp/rawdatapost/rawdata-outfits.webp" alt="Raw Data Outfits" />
   <figcaption><em>Daily outfits — color-coded for style, weather, and repetition tracking.</em></figcaption>
 </figure>
 
@@ -202,7 +202,7 @@ Scientific, isn't it?
 ### 🍽 Food
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-food.png" alt="Raw Data Food" />
+  <img src="/images_webp/rawdatapost/rawdata-food.webp" alt="Raw Data Food" />
   <figcaption><em>Every meal logged — for health, enjoyment, and consistency.</em></figcaption>
 </figure>
 
@@ -214,7 +214,7 @@ Stomach aching? Eating too much ice cream? Much easier to pinpoint the culprits 
 ### 📍 Places
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-places.png" alt="Raw Data Places" />
+  <img src="/images_webp/rawdatapost/rawdata-places.webp" alt="Raw Data Places" />
   <figcaption><em>Where I went — a spatial record of movement and presence.</em></figcaption>
 </figure>
 
@@ -226,7 +226,7 @@ Over time, it shows whether I’ve become more exploratory or more homebound.
 ### 🧑‍🤝‍🧑 People
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-peeps.png" alt="Raw Data People" />
+  <img src="/images_webp/rawdatapost/rawdata-peeps.webp" alt="Raw Data People" />
   <figcaption><em>People and interactions — a map of my social world.</em></figcaption>
 </figure>
 
@@ -246,7 +246,7 @@ These **advanced sheets** transform data into insight — and beauty.
 ### 🧮 Money Dashboard
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-money-dashboard.png" alt="Raw Data Dashboard" />
+  <img src="/images_webp/rawdatapost/rawdata-money-dashboard.webp" alt="Raw Data Dashboard" />
   <figcaption><em>The all-in-one overview for your finances — spending habits and averages.</em></figcaption>
 </figure>
 
@@ -259,7 +259,7 @@ Just wait until you see the ARCHIVE (provide link here of future blog post) wher
 ### 🎈 Weekend Sheet
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-wknd.png" alt="Weekend Summary" />
+  <img src="/images_webp/rawdatapost/rawdata-wknd.webp" alt="Weekend Summary" />
   <figcaption><em>A weekend-only snapshot — shows whether I need to go out more.</em></figcaption>
 </figure>
 
@@ -270,7 +270,7 @@ This draws data from the Raw Data sheet, showing us only the weekends. Find your
 ### 📉 Graphs I
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-graphs1.png" alt="Raw Data Graphs 1" />
+  <img src="/images_webp/rawdatapost/rawdata-graphs1.webp" alt="Raw Data Graphs 1" />
   <figcaption><em>Graphs turning daily logs into trends — visual analytics for self-awareness.</em></figcaption>
 </figure>
 
@@ -279,7 +279,7 @@ And with all the data and stats we've covered, doesn't it feel great to see it a
 ### 📈 Graphs II
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-graphs2.png" alt="Raw Data Graphs 2" />
+  <img src="/images_webp/rawdatapost/rawdata-graphs2.webp" alt="Raw Data Graphs 2" />
   <figcaption><em>Deeper patterns: correlations between productivity, rest, emotion, and more.</em></figcaption>
 </figure>
 
@@ -288,7 +288,7 @@ And how!
 ### 🏆 Trophy Shelf
 
 <figure>
-  <img src="/images/rawdatapost/rawdata-trophyshelf.png" alt="Trophy Shelf" />
+  <img src="/images_webp/rawdatapost/rawdata-trophyshelf.webp" alt="Trophy Shelf" />
   <figcaption><em>Cells turn green when goals are met — a gamified reward system within Sheets.</em></figcaption>
 </figure>
 
