--- a/src/content/blog/research-paper-fill-in-template.mdx
+++ b/src/content/blog/research-paper-fill-in-template.mdx
@@ -4,7 +4,7 @@ description: "A step-by-step guide to mastering structured research paper notes 
 pubDate: 2025-09-18
 draft: false
 tags: ["templates", "research", "workflow", "organization"]
-heroImage: "/templates/covers/research-template-cover.png"
+heroImage: "/templates/covers/research-template-cover.webp"
 heroImageStyle: "max-height: 600px; width: auto; display: block; margin: 0 auto; object-fit: contain;"
 wide: true
 ---
@@ -15,7 +15,7 @@ wide: true
 This labeled version shows what each section of the template is for:
 
 <img
-  src="/images/research-paper-fill-in-template-explained.png"
+  src="/images_webp/research-paper-fill-in-template-explained.webp"
   alt="Research Paper Fill-In Template with Labels — Front and Back"
   loading="lazy"
   style="
@@ -44,7 +44,7 @@ This labeled version shows what each section of the template is for:
   "
 >
   <img
-    src="/templates/examples/rpfo-ex-1.png"
+    src="/templates/examples/rpfo-ex-1.webp"
     alt="Research Paper Fill-In Template Example — Front"
     loading="lazy"
     style="
@@ -60,7 +60,7 @@ This labeled version shows what each section of the template is for:
     "
   />
   <img
-    src="/templates/examples/rpfo-ex-2.png"
+    src="/templates/examples/rpfo-ex-2.webp"
     alt="Research Paper Fill-In Template Example — Back"
     loading="lazy"
     style="
