--- a/src/content/blog/studytimer.mdx
+++ b/src/content/blog/studytimer.mdx
@@ -4,7 +4,7 @@ title: "LifeLoggerz StudyTimer — Turning Focus into Feedback Loops"
 pubDate: "2025-11-11"
 description: "The StudyTimer app that powers my daily focus sessions — milestone sounds, live stats, and frictionless time tracking built with Python and CustomTkinter."
 tags: ["LifeLoggerz", "Python", "CustomTkinter", "Productivity", "Focus", "Automation"]
-heroImage: "/images_webp/studytimer.webp"
+heroImage: "/images/studytimer.webp"
 draft: false
 ------------
 
